[package]
name = "json_utils_2024"
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
description = "Simple JSON utilities for Rust."
repository = "https://github.com/Rhelvetican/json_utils"
homepage = "https://github.com/Rhelvetican/json_utils"
keywords = ["serde", "json", "utilities"]
license = "MIT"
readme = "README.md"
version = "0.5.2"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "libjsonutils"
crate-type = ["lib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dependencies.anyhow]
version = "1"
optional = true

[features]
anyhow = ["dep:anyhow"]
