[package]
name = "libjsonutils"
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
description = "Simple JSON utilities for Rust."
repository = "https://github.com/Rhelvetican/json_utils"
homepage = "https://github.com/Rhelvetican/json_utils"
keywords = ["serde", "serde_json", "json", "utilities"]
license = "MIT"
readme = "README.md"
version = "0.6.3"
edition = "2021"

[dependencies]
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }

[dependencies.anyhow]
version = "1"
optional = true

[features]
anyhow = ["dep:anyhow"]
